[gd_scene load_steps=2 format=3 uid="uid://c8j6y4q3n5x2m"]

[ext_resource type="Script" uid="uid://dj57j10qr3l5c" path="res://scripts/ui/item_menu.gd" id="1_3k4m3"]

[node name="ItemMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3k4m3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Itens"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="Categories" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HealingItems" type="VBoxContainer" parent="MenuContainer/Categories"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CategoryTitle" type="Label" parent="MenuContainer/Categories/HealingItems"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
text = "Itens de Cura"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="MenuContainer/Categories/HealingItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusItems" type="VBoxContainer" parent="MenuContainer/Categories"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CategoryTitle" type="Label" parent="MenuContainer/Categories/StatusItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Itens de Status"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="MenuContainer/Categories/StatusItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleItems" type="VBoxContainer" parent="MenuContainer/Categories"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CategoryTitle" type="Label" parent="MenuContainer/Categories/BattleItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
text = "Itens de Batalha"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="MenuContainer/Categories/BattleItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "Selecione um item para ver sua descrição"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Fechar"
